--- a/Halloapp/en.lproj/Localizable.stringsdict
+++ b/Halloapp/en.lproj/Localizable.stringsdict
@@ -2,6 +2,38 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>timestamp.last.seen.n.minutes</key>
+	<dict>
+		<key>NSStringLocalizedFormatKey</key>
+		<string>%#@minutes@</string>
+		<key>minutes</key>
+		<dict>
+			<key>NSStringFormatSpecTypeKey</key>
+			<string>NSStringPluralRuleType</string>
+			<key>NSStringFormatValueTypeKey</key>
+			<string>d</string>
+			<key>one</key>
+			<string>Last seen %d minute ago</string>
+			<key>other</key>
+			<string>Last seen %d minutes ago</string>
+		</dict>
+	</dict>
+	<key>timestamp.n.days.short</key>
+	<dict>
+		<key>NSStringLocalizedFormatKey</key>
+		<string>%#@days@</string>
+		<key>days</key>
+		<dict>
+			<key>NSStringFormatSpecTypeKey</key>
+			<string>NSStringPluralRuleType</string>
+			<key>NSStringFormatValueTypeKey</key>
+			<string>d</string>
+			<key>one</key>
+			<string>%dd</string>
+			<key>other</key>
+			<string>%dd</string>
+		</dict>
+	</dict>
 	<key>privacy.n.contacts</key>
 	<dict>
 		<key>NSStringLocalizedFormatKey</key>
