Tweak the composer according to feedback
Fix some issues with postText view look and behaviour, add subitle,
minor ui tweaks and refactoring

--- a/Halloapp/Base.lproj/Localizable.stringsdict
+++ b/Halloapp/Base.lproj/Localizable.stringsdict
@@ -2,6 +2,22 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>composer.privacy.value.n.selected</key>
+	<dict>
+		<key>NSStringLocalizedFormatKey</key>
+		<string>%#@n_selected@</string>
+		<key>n_selected</key>
+		<dict>
+			<key>NSStringFormatSpecTypeKey</key>
+			<string>NSStringPluralRuleType</string>
+			<key>NSStringFormatValueTypeKey</key>
+			<string>d</string>
+			<key>one</key>
+			<string>Sharing with %d of my contacts</string>
+			<key>other</key>
+			<string>Sharing with %d of my contacts</string>
+		</dict>
+	</dict>
 	<key>timestamp.last.seen.n.minutes</key>
 	<dict>
 		<key>NSStringLocalizedFormatKey</key>
