[Chat] Messages can be retracted/deleted now and misc fixes - UI updates to chat list - Fix issue where messages can be out of order when rerequested - Localize strings in chat - Group chats will now send out pending messages once connected again

--- a/Halloapp/Base.lproj/Localizable.stringsdict
+++ b/Halloapp/Base.lproj/Localizable.stringsdict
@@ -182,5 +182,21 @@
 			<string>📷 %d photos</string>
 		</dict>
 	</dict>
+	<key>chat.n.users.typing</key>
+	<dict>
+		<key>NSStringLocalizedFormatKey</key>
+		<string>%@ %#@n_users@</string>
+		<key>n_users</key>
+		<dict>
+			<key>NSStringFormatSpecTypeKey</key>
+			<string>NSStringPluralRuleType</string>
+			<key>NSStringFormatValueTypeKey</key>
+			<string>d</string>
+			<key>one</key>
+			<string>is typing...</string>
+			<key>other</key>
+			<string>are typing...</string>
+		</dict>
+	</dict>
 </dict>
 </plist>
